--- a/HedgeModManager/Languages/zh-TW.xaml
+++ b/HedgeModManager/Languages/zh-TW.xaml
@@ -225,13 +225,14 @@
     <system:String x:Key="ThemeLight" >明亮</system:String>
 
     <!-- Games -->
-    <system:String x:Key="GameSonicGenerations">Sonic Generations - 索尼克 世代</system:String>
-    <system:String x:Key="GameSonicLostWorld">Sonic Lost World - 索尼克 失落的世界</system:String>
-    <system:String x:Key="GameSonicForces">Sonic Forces - 索尼克 武力</system:String>
-    <system:String x:Key="GamePuyoPuyoTetris2">Puyo Puyo Tetris 2 - 魔法氣泡特趣思俄羅斯方塊</system:String>
-    <system:String x:Key="GameTokyo2020">Olympic Games Tokyo 2020 - 2020年夏季奧運會</system:String>
-    <system:String x:Key="GameSonicColorsUltimate">Sonic Colours Ultimate - 索尼克 繽紛色彩 究極版</system:String>
-    <system:String x:Key="GameSonicOrigins">Sonic Origins - 索尼克 起源</system:String>
+    <system:String x:Key="GameSonicGenerations">索尼克 世代</system:String>
+    <system:String x:Key="GameSonicLostWorld">索尼克 失落的世界</system:String>
+    <system:String x:Key="GameSonicForces">索尼克 武力</system:String>
+    <system:String x:Key="GamePuyoPuyoTetris2">魔法氣泡 特趣思 俄羅斯方塊 2</system:String>
+    <system:String x:Key="GameTokyo2020">2020東京奧運</system:String>
+    <system:String x:Key="GameSonicColorsUltimate">索尼克 繽紛色彩 究極版</system:String>
+    <system:String x:Key="GameSonicOrigins">索尼克 起源</system:String>
+    <system:String x:Key="GameSonicFrontiers">索尼克 未知邊境</system:String>
     <system:String x:Key="GameNoGame">找不到遊戲</system:String>
     <system:String x:Key="LauncherSteam">Steam</system:String>
     <system:String x:Key="LauncherEpic">Epic Games</system:String>
