--- a/HedgeModManager/Languages/Languages.xaml
+++ b/HedgeModManager/Languages/Languages.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:HedgeModManager.Languages"
                     xmlns:col="clr-namespace:System.Collections;assembly=mscorlib">
@@ -9,6 +9,7 @@
         <local:LangEntry FileName="nl-NL" Name="Dutch (Netherlands)"/>
         <local:LangEntry FileName="de-DE" Name="Deutsch (German)"/>
         <local:LangEntry FileName="fr-FR" Name="Français (France)"/>
+        <local:LangEntry FileName="pl-PL" Name="Polski (Polish)"/>
         <local:LangEntry FileName="pt-PT" Name="Português (Portugal)"/>
         <local:LangEntry FileName="pt-BR" Name="Português (Brazil)"/>
         <local:LangEntry FileName="zh-TW" Name="中文繁體 (Chinese Traditional)"/>
