--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:dd="urn:gong-wpf-dragdrop"
         xmlns:local="clr-namespace:HedgeModManager"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="Hedge Mod Manager (7.0)" Unloaded="MainWindow_OnUnloaded"
         Loaded="Window_Loaded" PreviewKeyDown="Window_PreviewKeyDown"
@@ -165,18 +166,26 @@
                             </GroupBox>
                             <Grid>
                                 <Grid Margin="10,5,10,41" >
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition/>
-                                        <RowDefinition Height="Auto" MaxHeight="86"/>
-                                    </Grid.RowDefinitions>
-                                    
                                     <ListView x:Name="CodesList" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Foreground="White" SelectedItem="{Binding SelectedCode}" SizeChanged="CodesList_SizeChanged"
                                           PreviewKeyDown="CodesList_OnPreviewKeyDown" GridViewColumnHeader.Click="CodesList_GridViewColumnHeader_Click">
                                         <ListView.ItemContainerStyle>
                                             <Style TargetType="ListViewItem" BasedOn="{StaticResource {x:Type ListViewItem}}">
                                                 <Setter Property="ToolTip">
                                                     <Setter.Value>
-                                                        <ToolTip Content="{DynamicResource CodesUIInfo}"/>
+                                                        <ToolTip Content="{DynamicResource CodesUIInfo}" Tag="{Binding Description}">
+                                                            <ToolTip.Style>
+                                                                <Style TargetType="ToolTip" BasedOn="{StaticResource {x:Type ToolTip}}">
+                                                                    <Style.Triggers>
+                                                                        <Trigger Property="Tag" Value="{x:Static sys:String.Empty}">
+                                                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                                                        </Trigger>
+                                                                        <Trigger Property="Tag" Value="{x:Null}">
+                                                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                                                        </Trigger>
+                                                                    </Style.Triggers>
+                                                                </Style>
+                                                            </ToolTip.Style>
+                                                        </ToolTip>
                                                     </Setter.Value>
                                                 </Setter>
                                                 <EventSetter Event="MouseDoubleClick" Handler="CodesList_MouseDoubleClick"/>
@@ -207,13 +216,26 @@
                                         <TextBlock x:Name="CodesStatusLbl" Text="{DynamicResource CodesUIFetching}" IsVisibleChanged="OnFetchStatusVisibilityChanged"/>
                                     </StackPanel>
 
-                                    <Grid Grid.Row="1" Margin="0,0,1,0" Height="Auto">
-                                        <TextBlock Name="CodeDescription"
+                                    <Grid Name="UpperCodeDescriptionBox" Visibility="Hidden" VerticalAlignment="Top" Margin="0,23,9,0"
+                                          Height="Auto" MaxHeight="86" Background="{DynamicResource HMM.Window.BackgroundBrush}">
+                                        <Border BorderBrush="{DynamicResource HMM.Window.BorderBrush}" BorderThickness="1,1,0,1">
+                                            <TextBlock Name="UpperCodeDescription"
                                                        Margin="8,2.5,5,5"
                                                        VerticalAlignment="Center"
                                                        TextTrimming="CharacterEllipsis"
-                                                       TextWrapping="WrapWithOverflow"
-                                                       Visibility="Collapsed"/>
+                                                       TextWrapping="WrapWithOverflow"/>
+                                        </Border>
+                                    </Grid>
+
+                                    <Grid Name="LowerCodeDescriptionBox" Visibility="Hidden" VerticalAlignment="Bottom" Margin="0,0,9,0"
+                                          Height="Auto" MaxHeight="86" Background="{DynamicResource HMM.Window.BackgroundBrush}" MouseEnter="LowerCodeDescriptionBox_MouseEnter">
+                                        <Border BorderBrush="{DynamicResource HMM.Window.BorderBrush}" BorderThickness="1,1,0,1">
+                                            <TextBlock Name="LowerCodeDescription"
+                                                       Margin="8,2.5,5,5"
+                                                       VerticalAlignment="Center"
+                                                       TextTrimming="CharacterEllipsis"
+                                                       TextWrapping="WrapWithOverflow"/>
+                                        </Border>
                                     </Grid>
                                 </Grid>
                                 <Border x:Name="CodesFind" BorderThickness="1,1,1,1" HorizontalAlignment="Right" VerticalAlignment="Bottom" CornerRadius="8,8,0,0" Margin="0,2,20,41" Visibility="Collapsed" BorderBrush="{DynamicResource HMM.Window.BorderBrush}" Background="{DynamicResource HMM.Window.BackgroundBrush}">
