[UI] Disable column re-ordering for Mods and Codes
Neither of these lists save the column order anywhere, so this feature is useless.

--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -70,7 +70,7 @@
                                     </Style>
                                 </ListView.ItemContainerStyle>
                                 <ListView.View>
-                                    <GridView>
+                                    <GridView AllowsColumnReorder="False">
                                         <GridViewColumn Header="{DynamicResource ModsUIName}" Width="200">
                                             <GridViewColumn.CellTemplate>
                                                 <DataTemplate>
@@ -194,7 +194,7 @@
                                             </Style>
                                         </ListView.ItemContainerStyle>
                                         <ListView.View>
-                                            <GridView>
+                                            <GridView AllowsColumnReorder="False">
                                                 <GridViewColumn Header="{DynamicResource CodesUIName}" Width="285">
                                                     <GridViewColumn.CellTemplate>
                                                         <DataTemplate>
