--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HedgeModManager.AboutWindow"
+<Window x:Class="HedgeModManager.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -63,7 +63,7 @@
                 <StackPanel Grid.Column="0">
                     <Label Content="PTKickass"/>
                     <Label Content="JoeyLaw"/>
-                    <Label Content="_Wr_"/>
+                    <Label Content="Wr (AlanYe-Dev）"/>
                     <Label Content="LJSTAR"/>
                     <Label Content="Nanoposan69"/>
                     <Label Content="ricky-daniel13"/>
